--- a/excercicios/ex001/style.css
+++ b/excercicios/ex001/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+:root{
+    --cor-manha: #D4A631;  --cor-tarde: #C47F6C; --cor-noite: #43314C;
+}
+
 body{
     background-color: rgb(70, 142, 236);
     font: normal 15pt Arial;
@@ -14,6 +18,17 @@ section{
     border-radius: 10px;
     padding: 15px; margin: auto;
     width: 500px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+section div#msg{
+    margin-bottom: 15px; padding: 10px;
+    text-align: center;
+}
+
+section img{
+    width: 250px; height: 250px;
+    border-radius: 50%;
+    display: block; margin: auto;
 }
 
 footer{
