--- a/excercicios/ex002/style.css
+++ b/excercicios/ex002/style.css
@@ -16,6 +16,10 @@ section{
     width: 500px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+img#foto{
+    width: 250px; height: 250px; border-radius: 50%;
+}
+
 footer{
     color: #fff; text-align: center;
     font-style: italic;
