--- a/excercicios/ex003/style.css
+++ b/excercicios/ex003/style.css
@@ -1,1 +1,22 @@
 @charset "utf-8";
+
+body{
+    background-color: rgb(70, 142, 236);
+    font: normal 15pt Arial;
+}
+
+header{
+    color: #fff; text-align: center;
+}
+
+section{
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 15px; margin: auto;
+    width: 500px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+footer{
+    color: #fff; text-align: center;
+    font-style: italic;
+}
